Publishing to github

--- a/src/app/todolist/todolist.component.css
+++ b/src/app/todolist/todolist.component.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   border: 2px solid #ccc;
   padding: 20px;
-  background-color: #e772a9; /* Light gray background */
+  background-color: #747279; /* Light gray background */
 }
 
 h1 {
